# QCASim

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: build-release.yml  build-test.yml  buildTestDelpoy.yml  release.yml
QCACore/: CMakeLists.txt
QCACore/src/: qcaspch.h
QCACore/src/QCACore/Data/: BufferedStream.h
QCACore/src/QCACore/Sim/: SimulationEngine.cpp  SimulationEngine.h  SimulationModel.hpp  SimulationModelConfig.hpp
QCACore/src/QCACore/Simulation/: Cell.hpp  SimulationEngine.h  SimulationModel.hpp  SimulationSettings.hpp
QCACore/src/QCACore/Utilities/Container/: RingBuffer.h  RingBuffer.hpp
QCACore/src/QCACore/Utilities/Json/: JsonFile.cpp  JsonFile.h
QCACore/src/QCACore/Utilities/Stream/: BufferedStream.cpp  BufferedStream.h  BufferedStream.hpp  FileStream.hpp  IStream.hpp
QCACore/src/QCACore/Utils/Json/: JsonFile.cpp  JsonFile.h  JsonNode.hpp
QCAExample/: CMakeLists.txt
QCAExample/src/: BistableModel.cpp  BistableModel.h  example.cpp
QCASim/: CMakeLists.txt
QCASim/src/: qcaspch.h
QCASim/src/QCASim/: AppContext.hpp  QCASim.cpp  QCASim.h  QCASimComponent.hpp
QCASim/src/QCASim/Data/: MachineStats.cpp  MachineStats.h
QCASim/src/QCASim/Input/: Input.cpp  Input.h
QCASim/src/QCASim/UI/: FontManager.cpp  FontManager.h  Graphics.cpp  Graphics.h
QCASim/src/QCASim/UI/Frames/: BaseFrame.hpp  IFrame.hpp  MainFrame.cpp  MainFrame.h  MenuBarFrame.cpp  MenuBarFrame.h  SceneFrame.cpp  SceneFrame.h  StatsFrame.cpp  StatsFrame.h
QCASim/src/QCASim/UI/Visuals/: BaseVisual.hpp  OrtographicCamera.cpp  OrtographicCamera.h  SceneVisual.cpp  SceneVisual.h
QCATest/: CMakeLists.txt
QCATest/src/: BufferedStreamTest.cpp  FileStreamTest.cpp  JsonTest.cpp  RingBufferTest.cpp
examples/: inverter.qcd  line-clocked.qcd  line.qcd  majority-diagonal.qcd  majority.qcd  memory-cell.qcd
qca-core/: Cargo.toml
qca-core/src/: lib.rs
qca-core/src/analysis/: mod.rs  truth_table.rs
qca-core/src/datafile/: mod.rs
qca-core/src/design/: file.rs  mod.rs
qca-core/src/objects/: architecture.rs  cell.rs  clock.rs  generator.rs  input_generator.rs  layer.rs  log.rs  mod.rs
qca-core/src/sim/: architecture.rs  cell.rs  clock.rs  input_generator.rs  layer.rs  mod.rs  model.rs  settings.rs
qca-core/src/sim/bistable/: mod.rs
qca-core/src/sim/full_basis/: mod.rs
qca-core/src/simulation/: clock_generator.rs  file.rs  input_generator.rs  mod.rs  model.rs  settings.rs
qca-core/src/simulation/bistable/: mod.rs
qca-core/src/simulation/full_basis/: mod.rs
qca-core/src/simulation/icha/: mod.rs
qca-sim/: Cargo.toml
qca-sim/src/: analyze_logic.rs  main.rs  sim.rs
scripts/: analysis.ipynb  analyze_sim_time.py  analyze_truth.py  data-analyzer.py  design-spacing-generator.py  gen_designs.py  load_sim.py  plot_sim.py  plot_truth.py  run_sim.py  simulation-runner.py  truth-table-analyzer.py  visualize_truth.py
utils/: data-analyzer.py
