[package]
name = "qca-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1.0.23"
serde = { version = "1.0.139", features = ["derive"] }
serde-inline-default = "0.2.0"
serde_json = "1.0"
serde_repr = "0.1"
